--- a/pur_beurre/catalog/templates/catalog/base.html
+++ b/pur_beurre/catalog/templates/catalog/base.html
@@ -22,7 +22,7 @@
   <link href="{% static 'catalog/vendor/magnific-popup/magnific-popup.css' %}" rel="stylesheet">
 
   <!-- Theme CSS - Includes Bootstrap -->
-  <link href="{% static 'catalog/css/creative.min.css' %}" rel="stylesheet">
+  <link href="{% static 'catalog/css/creatives.min.css' %}" rel="stylesheet">
 
   <!-- Custom styles for this template -->
   <link href="{% static 'catalog/css/main.css' %}" rel="stylesheet">
