--- a/pur_beurre/catalog/templates/catalog/search.html
+++ b/pur_beurre/catalog/templates/catalog/search.html
@@ -21,7 +21,7 @@
 <section>
 	<div class="container">
 		<div class="col-md-18 text-center">    
-		        <h2 class="section-heading">Vous pouvez remplacer cette aliment par :</h2>
+		        <h2 class="section-heading">Vous pouvez remplacer cet aliment par :</h2>
 		        <hr>
 				{% for new_product in alt_products %}
 					<div class="card product-card">
